# Epic-Logger-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
Themes/: cyberpunk_theme.json  medieval_theme.json  mythology_theme.json  pirate_theme.json
Themes/Default_Themes/: space_theme.json  superhero_theme.json
app/: __init__.py  epic_log_generator.py  main.py  theme_loader.py
tests/: test_epic_changelog.py  test_theme_loader.py
