[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Epic-Logger-Agent"
version = "1.0.0"
description = "Transform boring software changelogs into epic theatrical narratives"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "humancodermj"}
]
keywords = ["changelog", "ai", "llm", "epic", "storytelling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "colorama>=0.4.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "google-auth>=2.40.3",
    "google-genai>=1.31.0",
]

[project.scripts]
epiclog = "app.main:main"
changelog = "app.main:main"

[project.urls]
Homepage = "https://github.com/human-coder-mj/Epic-Logger-Agent"
Repository = "https://github.com/human-coder-mj/Epic-Logger-Agent"
Issues = "https://github.com/human-coder-mj/Epic-Logger-Agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
